--- a/Translations/en-EN.csv
+++ b/Translations/en-EN.csv
@@ -20,6 +20,7 @@
 "LBR_CHI_SCH","Age in years at which children start school"
 "LBR_CHI_TEE","Age in years at which children start high school"
 "LBR_CHI_YOU","Age in years at which children start college/university"
+"LBR_CHI_UNI","How many years of study at a university"
 "LBR_HEA","Health"
 "LBR_HEA_ILL","Random illness % chance per decade of life"
 "LBR_HEA_ILD","Does not affect sickness from specific causes, e.g. pollution or noise"
